Revert "make sure borders display for ss null cells on ff"
This reverts commit 20a195da98a405cd1c564a2c28d2f21dd342a39c.

This messed up add selector placement

--- a/app/assets/volume/spreadsheet.styl
+++ b/app/assets/volume/spreadsheet.styl
@@ -68,8 +68,7 @@
   td.null
     background-color gray
     font-size 0.8em 
-    text-align center
-    position static    
+    text-align center    
 
   td.blank
     color gray
